--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">test_feb09</string>
     <string name="hello_sam">Hello Sam!</string>
+    <string name="hi_rodney">Hi Rodney!</string>
 </resources>
